<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlassNetInfo</string>

    <string name="title_activity_main">Show Network Info</string>
    <string name="glass_voice_trigger">Show network info</string>

    <string name="title_activity_toggle_wifi">Toggle WiFi</string>

    <string name="wifi_ip_label">WiFi IP</string>
    <string name="wifi_ssid_label">SSID</string>
    <string name="ext_ip_label">Ext IP</string>
    <string name="ext_provider_label">Provider</string>
    <string name="retrieving">retrieving&#8230;</string>
    <string name="wlan_na">n/a</string>
    <string name="ssid_na">n/a</string>
    <string name="http_response_na">n/a</string>
    <string name="http_response_timeout">(timeout)</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_toggle_wifi">Toggle WiFi</string>

    <string name="toggle_wifi_cancel_toggle">Cancel</string>
    <string name="toggle_wifi_close_activity">Return</string>
    <string name="toggle_wifi_enable_wifi">Enable WiFi</string>
    <string name="toggle_wifi_disable_wifi">Disable WiFi</string>

</resources>
