<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowWifiIP">

        <TextView
            android:layout_width="@dimen/left_column_width"
            android:layout_height="fill_parent"
            android:text="@string/wifi_ip_label"
            android:id="@+id/textViewWifiIPLabel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieving"
            android:id="@+id/textViewWifiIP" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowWifiSSID"
        android:visibility="invisible">

        <TextView
            android:layout_width="@dimen/left_column_width"
            android:layout_height="fill_parent"
            android:text="@string/wifi_ssid_label"
            android:id="@+id/textViewWifiSSIDLabel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieving"
            android:id="@+id/textViewWifiSSID" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowExtIP">

        <TextView
            android:layout_width="@dimen/left_column_width"
            android:layout_height="fill_parent"
            android:text="@string/ext_ip_label"
            android:id="@+id/textViewExtIPLabel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieving"
            android:id="@+id/textViewExtIP" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowExtProvider"
        android:visibility="invisible">

        <TextView
            android:layout_width="@dimen/left_column_width"
            android:layout_height="fill_parent"
            android:text="@string/ext_provider_label"
            android:id="@+id/textViewExtProviderLabel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieving"
            android:id="@+id/textViewExtProvider" />

    </LinearLayout>

</LinearLayout>